# cxx_medreminder

./: CMakeLists.txt
src/: main.cpp
